# Bragi

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  bragi.ini  bragi.json  dependencies.txt  pom.xml  requirements.txt
cmake/: dpp.cmake
src/: Master.cpp  master.cc  master.cpp  master.h
src/base/: bragi.cc  bragi.commands.cpp  bragi.cpp  bragi.h  bragi_hash_map.cpp  bragi_hash_map.h  commands.cpp  playlist.cpp  playlist.h
src/client/: deezer_client.cc  deezer_client.cpp  deezer_client.h
src/command/: join.cc  join.cpp  join.h  leave.cc  leave.cpp  leave.h  list.cc  list.cpp  list.h  loop.cc  loop.cpp  loop.h  next.cc  next.cpp  next.h  ping.cc  ping.cpp  ping.h  play.cc  play.cpp  play.h  play_attachment.cpp  play_attachment.h  skip.cc  skip.cpp  skip.h  speed.cc  speed.cpp  speed.h
src/comps/: guild.cpp  guild.h
src/coms/: error.cpp  error.h  join.cpp  join.h  leave.cpp  leave.h  ping.cpp  ping.h  play_attachment.cpp  play_attachment.h
src/converter/: audio_to_opus.cpp  audio_to_opus.h  flac_to_opus.cpp  flac_to_opus.h  opus_converter.cpp  opus_converter.h  wav_to_opus.cpp  wav_to_opus.h
src/exception/: bragi_exception.cc  bragi_exception.cpp  bragi_exception.h  http_client_exception.cpp  http_client_exception.h  invalid_arl_exception.h  json_exception.cc  json_exception.cpp  json_exception.h
src/guild/: guild.cpp  guild.h  guild_player.cc  guild_player.cpp  guild_player.h  player.h
src/http/: http_client.cpp  http_client.h  https_client.cpp  https_client.h  web_client.cpp  web_client.h
src/locale/: locale.h
src/main/java/Bragi/: Bragi.java  DeezerMethods.java  EventHandler.java  Methods.java  PlayMethods.java  Player.java  PlayerMethods.java  Playlist.java  Settings.java
src/main/java/Bragi/APIObjectsInfo/: TrackInfo.java
src/main/java/Bragi/LavaPlayer/: AudioPlayerSendHandler.java  GuildMusicManager.java  GuildPlayer.java  Player.java  TrackScheduler.java
src/main/java/Bragi/ObjectsInfo/: TrackInfo.java
src/main/java/bragi/: Bragi.java  Settings.java
src/main/java/bragi/core/: EventHandler.java  Informer.java  Methods.java  Player.java  Settings.java
src/main/java/bragi/info/: AlbumInfo.java  TrackInfo.java
src/main/java/bragi/lavaplayer/: AudioPlayerSendHandler.java  GuildMusicManager.java  GuildPlayer.java  TrackScheduler.java
src/main/java/bragi/util/: DeezerMethods.java  EventHandler.java  Informant.java  Methods.java  (+3 more)
src/player/: attachment_track.cpp  attachment_track.h  guild_player.cpp  guild_player.h  playlist.cpp  playlist.h  track.cpp  track.h
src/player/track/: attachment_track.cpp  deezer_track.cpp  deezer_track.h  track.cpp  track.h
src/sender/: flac_sender.cpp  flac_sender.h  flac_sender.tpp  opus_sender.cpp  opus_sender.h
src/template/: hash_map.hpp  linked_list.hpp
src/track/: deezer_track.cc  deezer_track.cpp  deezer_track.h  track.cc  track.cpp  track.h
src/types/: base.h  string.cpp  string.h  string.hpp
src/util/: bragi_exception.cpp  bragi_exception.h  color.cc  color.cpp  color.h  dictionary.h  http_client.cpp  http_client.h  json.cpp  json.h  linked_list.cpp  linked_list.h  linked_list.tpp  logger.cc  logger.cpp  logger.h  logger.hpp  num_parser.cpp  num_parser.h  parser.cc  parser.cpp  parser.h  path.cpp  path.h  properties.cc  properties.cpp  properties.h  settings.cc  settings.cpp  settings.h  time.cpp  time.h
src/web/: dns.cpp  dns.h  http_client.cc  http_client.cpp  http_client.h  https_client.cpp  https_client.h  web_client.cpp  web_client.h
(+29 files in other folders)
